# babo

./: Cargo.toml  README.md
assets/shaders/: font.frag  font.vert  sprite.frag  sprite.vert
examples/: simple.rs
src/: lib.rs  main.rs  utils.rs
src/rendering/: camera.rs  mod.rs  shader.rs  sprite_renderer.rs  texture.rs  window.rs
src/rendering/opengl/: font_renderer.rs  mod.rs  shader.rs  sprite_renderer.rs  texture.rs
src/rendering/sdl2/: window.rs
