[package]
name = "babo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
image = "0.24.5"
nalgebra = "0.32.1"
sdl2 = { version = "0.35.2", features = ["bundled"] }
snafu = "0.7.4"

[features]
default = ["sdl2", "opengl"]
sdl2 = []
opengl = []
