[package]
name = "babo"
version = "0.1.0"
edition = "2021"


[dependencies]
freetype-rs = "0.32.0"
gl = "0.14.0"
image = "0.24.5"
nalgebra = "0.32.1"
sdl2 = { version = "0.35.2", features = ["bundled"] }
snafu = "0.7.4"

# Features
[features]
default = ["sdl2", "opengl"]
sdl2 = []
opengl = []

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
